--- a/css/style.css
+++ b/css/style.css
@@ -108,4 +108,8 @@ div#my-carousel .my-thumbnails .my-thumbnail.active{
     border: 3px rgb(197, 197, 197) solid;
 }
 
+.hide{
+    display: none;
+}
+
 
